added sleep in test

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,14 +7,19 @@ services:
   - docker
 
 before_install:
-  - docker build -t webserver ./webserver
+  # - docker network create my-network
+  # - docker build -t webserver ./webserver
   - docker build -t my-mysql ./my-mysql
-  - docker run -d -p 3309:3306 --name my-mysql -e MYSQL_ROOT_PASSWORD=my-secret-pw my-mysql
-  - docker run -d -p 5000:5000 --name webserver -e FLASK_APP=webserver.py webserver
+  - docker run my-network -d -p 3309:3306 --name my-mysql -e MYSQL_ROOT_PASSWORD=my-secret-pw my-mysql
+  # - docker run --network my-network -d -p 5000:5000 --name webserver -e FLASK_APP=webserver.py webserver
   - docker ps -a
 
-# install: 
-#   - pip install -r webserver/requirements.txt
+install: 
+  - pip install -r webserver/requirements.txt
 
 script:
+  - export FLASK_APP=webserver.py 
+  - cd webserver
+  - flask run 
+  - cd ..
   - python tests.py
