update travis yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,8 @@ services:
   - docker
 
 before_install:
-  # - docker network create my-network
-  # - docker build -t webserver ./webserver
   - docker build -t my-mysql ./my-mysql
-  - docker run my-network -d -p 3309:3306 --name my-mysql -e MYSQL_ROOT_PASSWORD=my-secret-pw my-mysql
-  # - docker run --network my-network -d -p 5000:5000 --name webserver -e FLASK_APP=webserver.py webserver
+  - docker run -d -p 3309:3306 --name my-mysql -e MYSQL_ROOT_PASSWORD=my-secret-pw my-mysql
   - docker ps -a
 
 install: 
