--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ before_install:
 install: 
   - pip install -r webserver/requirements.txt
 
+before_script:
+  - sleep 5
+
 script:
   - export FLASK_APP=webserver.py 
   - cd webserver
