--- a/.travis.yml
+++ b/.travis.yml
@@ -8,18 +8,20 @@ services:
 
 before_install:
   - docker build -t my-mysql ./my-mysql
+  - docker build -t webserver ./webserver
   - docker run -d -p 3309:3306 --name my-mysql -e MYSQL_ROOT_PASSWORD=my-secret-pw my-mysql
-  - docker ps -a
-
-install: 
-  - pip install -r webserver/requirements.txt
-
-before_script:
   - sleep 15
+  - docker run -d -p 5000:5000 --name webserver -e FLASK_APP=webserver.py webserver
+
+# install: 
+#   - pip install -r webserver/requirements.txt
+
+# before_script:
+#   - sleep 15
 
 script:
-  - export FLASK_APP=webserver.py 
-  - cd webserver
-  - flask run 
-  - cd ..
+  # - export FLASK_APP=webserver.py 
+  # - cd webserver
+  # - flask run &
+  # - cd ..
   - python tests.py
